# MR2019

./: .gitignore  BankTask.c  Project Quests v1.0.cpp  Project1.c  Project1.cbproj  README.md  Vodorezov Gleb
ArhipovAE/: main.c  test_vector
ArhipovAE/5_sem/: exam.cpp
ArhipovAE/Test_final/: api.cpp  api.h  cpp_quest.cpp  cpp_quest.h  main.cpp
ArhipovAE/experiment/: main.cpp
ArhipovAE/new_lib/: linked_list.h  main.c
ArhipovAE/search/: .gitignore
ChernovEI/: CMakeLists.txt  RandomTest.cpp  RandomTest.h  main.cpp
ChernovEI/1_HeapSort/: CMakeLists.txt
ChernovEI/1_HeapSort/src/: ChernovEI.heapsort.cpp
ChernovEI/2_BinaryTree/: CMakeLists.txt
ChernovEI/2_BinaryTree/src/: Ex.cpp  InnerNode.cpp  InnerNode.h  Node.cpp  Node.h  Tree.cpp  Tree.h  main.cpp
ChernovEI/BinaryTree/: CMakeLists.txt  main.cpp
ChernovEI/BinaryTree/src/: Binary_tree.cpp  Binary_tree.h  Data.cpp  Data.h  Node.cpp  Node.h  Past_node.cpp  Past_node.h  Tree.cpp  Tree.h
ChernovEI/BinaryTree/src/entities/: Data.cpp  Data.h  Number.h
ChernovEI/BinaryTree/tests/: Data.cpp  Data.h  Main_test.h  Number.cpp  Number.h  Test.cpp  Test.h  Tree_test.h  test_for_each.cpp
ChernovEI/BinaryTree/tests/old/: Main_test.cpp  Main_test.h  Tree_test.cpp  Tree_test.h
ChernovEI/btree/: CMakeLists.txt
ChernovEI/btree/src/: Tree.h
ChernovEI/coursework/report/: ЧерновЕИ.docx
ChernovEI/lib/: CMakeLists.txt  Questions.txt
Corruption/ConsoleApplication10/: stdafx.cpp
DemchevaAA/Coursework (Aho-Corasick algorithm)/: Aho-Сorasick algorithm.cpp
DemchevaAA/Exam/: Exam_task.cpp
DemchevaAA/Test with classes, strings, vectors/: Тест с классами.cpp
DemchevaAA/Test with libraries/: LibraryTest.h  NewClientTest.cpp  NewTestLibrary.cpp  NewTestLibrary.lib
DemchevaAA/VI semester/: 1. BinarySearch.cpp  2. Sorts - Bubble, Insert, Merge.cpp  3. Binary tree.cpp  3. DemchevaAA.heapsort.cpp  4. DemchevaAA.binary.tree.cpp
Denikin/: readme.txt
Denikin/Exam/: Exam.vcxproj  Exam.vcxproj.filters  Source.cpp
DenikinVA/: 123  Timsort.cpp  stdc++.h  ДеникинВА.binary.tree.cpp  ДеникинВА.heapsort.cpp
IgnatovaEA/: ConsoleApplication1.cpp
Ilya'Clever0ne'Pankov/Quest/: CMakeLists.txt  api.cpp  api.h  clever0ne_quest.cpp  clever0ne_quest.h  cpp_quest.cpp  cpp_quest.h  main.cpp
Ilya'Clever0ne'Pankov/TestTaskWithClasses/: CMakeLists.txt  main.cpp  mylib.cpp  mylib.h  questions.cpp  questions.h
JarvisProgress/: CMakeLists.txt  main.cpp
JustForLulz/: CMakeLists.txt  TestLIb.cpp  TestLIb.h  main.cpp
KondratchenkoOleg/: all tasks.cpp
KondratchenkoOleg/quizz with library/: CMakeLists.txt  quizz_header.h  quizz_library.cpp  quizz_main.cpp
KozlovDA/: Lib_classes.h  Lib_test_with_classes.cpp  Lib_test_with_classes.h  TestLib.cpp  TestLib.h  Test_with_classes.cpp  Тест.cpp
LarionovAA/: Bank_task.cpp  Bank_tast_with_comments.cpp  Test_№1.cpp
LyahovskijMV/: 111.txt  Ляховский МВ.binary.tree.cpp  ЛяховскийМВ.b.tree.cpp  ЛяховскийМВ.heapsort.cpp
LyaptsevIA/: ilya.cpp
SOKOLOV-D-A/: B-Tree.cpp  README.md  class_tree.cpp  heapsort.cpp  make_heap.cpp  sort.cpp
SOKOLOV-D-A/CMake_Quiz-with-lib/CMake_Test/: CMakeLists.txt  CMake_Test_library.h  Cmake_Test_library.cpp  main.cpp  main.h
SOKOLOV-D-A/Quiz-with-another-lib/CMake_Test/: CMakeLists.txt  CMake_Test_library.h  Cmake_Test_library.cpp  main.cpp  main.h
SOKOLOV-D-A/Test-by-lector/Testik_by_teacher/: CMakeLists.txt  api.cpp  api.h  cpp_quest.cpp  cpp_quest.h  main.cpp
SamarinAS/: Test.cpp
ShkabaraKondrashova/: Test6.cpp
ShkabaraYA/: B-Tree.cpp  Binary heap.cpp  Binary tree.cpp  Heap sort.cpp  Merge sort.cpp  Sort.cpp
ShkabaraYA/Тест/: а  (+1 more)
SomovALexS/: CMakeLists.txt  api.cpp  api.h  test.cpp  test.h
SomovAS/: CMakeLists.txt  api.h  main.cpp  mylibrary_test.cpp  mylibrary_test.h  test.cpp  test.h  try.h
YakimenkoGK/: main.cpp
Yakimenko_test/: CMakeLists.txt  main.cpp  myTestLib.cpp
YarmakSO/: ЯрмакСО.heapsort.cpp
(+571 files in other folders)
